Revision history for XT-Files

{{$NEXT}}

  - Changed license to the ISC license
  - Removed dependency on Class::Tiny, Role::Tiny, and constant
  - Fixed dependency - is_lax requires version 0.81

0.002  2019-08-24 21:57:35 UTC

  - XT_FILES_DEFAULT_CONFIG_FILE can be used to specify a different
    default config file

0.001  2019-07-30 20:23:17 UTC

  - Initial release