@@ -47,10 +47,11 @@
       },
       "test" : {
          "requires" : {
+            "Exporter" : "0",
+            "File::Spec" : "0",
             "File::Temp" : "0",
             "File::stat" : "0",
             "Test::Builder::Tester" : "0",
-            "Test::Fatal" : "0",
             "Test::More" : "0.88",
             "perl" : "5.006"
          }
