@@ -3,10 +3,11 @@ abstract: 'standard interface for author tests to find files to check'
 author:
   - 'Sven Kirmess <sven.kirmess@kzone.ch>'
 build_requires:
+  Exporter: '0'
+  File::Spec: '0'
   File::Temp: '0'
   File::stat: '0'
   Test::Builder::Tester: '0'
-  Test::Fatal: '0'
   Test::More: '0.88'
   perl: '5.006'
 configure_requires:
