@@ -30,10 +30,11 @@ my %WriteMakefileArgs = (
         warnings         => 0,
     },
     TEST_REQUIRES => {
+        Exporter                => 0,
+        'File::Spec'            => 0,
         'File::Temp'            => 0,
         'File::stat'            => 0,
         'Test::Builder::Tester' => 0,
-        'Test::Fatal'           => 0,
         'Test::More'            => '0.88',
     },
     VERSION => '0.002',
@@ -45,15 +46,16 @@ my %WriteMakefileArgs = (
 my %FallbackPrereqs = (
     Carp                    => 0,
     Cwd                     => 0,
+    Exporter                => 0,
     'File::Basename'        => 0,
     'File::Find'            => 0,
+    'File::Spec'            => 0,
     'File::Temp'            => 0,
     'File::stat'            => 0,
     'Module::Load'          => 0,
     'Scalar::Util'          => 0,
     'Test::Builder'         => 0,
     'Test::Builder::Tester' => 0,
-    'Test::Fatal'           => 0,
     'Test::More'            => '0.88',
     lib                     => 0,
     overload                => 0,
