@@ -1,5 +1,3 @@
-#!perl
-
 # vim: ts=4 sts=4 sw=4 et: syntax=perl
 #
 # Copyright (c) 2018-2022 Sven Kirmess
@@ -20,31 +18,27 @@ use 5.006;
 use strict;
 use warnings;
 
-use Test::Builder::Tester;
-use Test::More 0.88;
+package Local::Test::Exception;
 
-use Cwd            ();
-use File::Basename ();
-use File::Spec     ();
-use lib File::Spec->catdir( File::Basename::dirname( Cwd::abs_path __FILE__ ), 'lib' );
+our $VERSION = '0.001';
 
-use Local::Test::Exception qw(exception);
+# Support Exporter < 5.57
+require Exporter;
+our @ISA       = qw(Exporter);    ## no critic (ClassHierarchies::ProhibitExplicitISA)
+our @EXPORT_OK = qw(exception);
 
-use XT::Files;
+sub exception(&) {
+    my ($code) = @_;
 
-delete $ENV{XT_FILES_DEFAULT_CONFIG_FILE};
+    my $e;
+    {
+        local $@;
+        if ( !eval { $code->(); 1; } ) {
+            $e = $@;
+        }
+    }
 
-chdir 'corpus/dist2' or die "chdir failed: $!";
+    return $e;
+}
 
-is( XT::Files->_is_initialized, undef, 'singleton is not initialized' );
-
-my $expected_output = q{[XT::Files] Multiple default config files found: '.xtfilesrc' and 'xtfiles.ini'};
-test_out("# $expected_output");
-my $output = exception { XT::Files->new };
-test_test('correct error message');
-like( $output, qr{\Q$expected_output\E}, 'new dies if multiple default config files are present' );
-
-#
-done_testing();
-
-exit 0;
+1;
