@@ -21,12 +21,17 @@ use strict;
 use warnings;
 
 use Test::Builder::Tester;
-use Test::Fatal;
 use Test::More 0.88;
 
 use File::stat;
 use File::Temp;
-use lib ();
+
+use Cwd            ();
+use File::Basename ();
+use File::Spec     ();
+use lib File::Spec->catdir( File::Basename::dirname( Cwd::abs_path __FILE__ ), 'lib' );
+
+use Local::Test::Exception qw(exception);
 
 use XT::Files;
 
